Prevent HOT Error Messages from getting cut off
Fixes #932

--- a/specifyweb/frontend/js_src/css/workbench.css
+++ b/specifyweb/frontend/js_src/css/workbench.css
@@ -144,8 +144,9 @@
 }
 
 .htComments.repositioned {
-  --offset-left: 0;
-  left: var(--offset-left) !important;
+  --offset-right: 50vw;
+  right: var(--offset-right);
+  left: unset !important;
 }
 
 /* Sorting direction */
